fix: fix some mobile gaps&margins

--- a/src/blocks/courses/__buttons/courses__buttons.css
+++ b/src/blocks/courses/__buttons/courses__buttons.css
@@ -13,5 +13,6 @@
 @media screen and (max-width: 425px) {
   .courses__buttons {
     flex-direction: column-reverse;
+    margin-top: 0;
   }
 }
