--- a/src/blocks/courses/__card-text/courses__card-text.css
+++ b/src/blocks/courses/__card-text/courses__card-text.css
@@ -1,7 +1,7 @@
 .courses__card-text {
   min-height: min-content;
   max-height: 100%;
-  margin: 0 0 15px;
+  margin: 0 0 18px;
   padding: 0;
   text-overflow: ellipsis;
 }
