--- a/src/blocks/courses/__list/courses__list.css
+++ b/src/blocks/courses/__list/courses__list.css
@@ -5,8 +5,15 @@
   margin: 12px 10px 0 0;
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .courses__list {
     gap: 10px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .courses__list {
+    gap: 12px;
+    margin-right: 0;
   }
 }
